* Wed Jul 20 2011 Thunor <thunorsif@hotmail.com>
- Added support for menuitem accelerators via the "accel-key" and
  "accel-mods" custom tag attributes and both values can be entered as
  either decimal or hexadecimal integers (when you see gdk/gdkkeysyms.h
  you'll know why ;) ). gdk/gdktypes.h holds the modifier values.

* Mon Jul 18 2011 Thunor <thunorsif@hotmail.com>
- Overhauled the entry widget:
- Fixed the exclusive default signal i.e. it wasn't possible to have a
  default action and another action specifying the same signal.
- Removed the odd manual emission of the default "changed" signal when
  using the fileselect function i.e. inserting text.
- Fixed widget_entry_refresh which wasn't distinguishing between <input>
  and <input file> directives (file loading wasn't implemented anyway)
  and then attempted to execute the <input file> if declared.
- Added support for the save function (now a full action function set).
- Added support for the custom tag attribute "block-function-signals".
- Added support for the "activate" signal emitted from pressing Enter.
- Added support for the "icon-press" and "icon-release" signals,
  actually prefixed with "primary-" or "secondary-" to distinguish
  between them.

* Sun Jul 17 2011 Thunor <thunorsif@hotmail.com>
- Added a custom tag attribute called "block-function-signals" that's
  currently being used in the h/vscale code, but it can be applied to
  other widgets if required. It blocks signal emissions when functions
  are being performed (refresh etc.) so that application developers can
  isolate signals originating from user widget manipulation.

* Sat Jul 16 2011 Thunor <thunorsif@hotmail.com>
- Updated the long forgotten about widget_get_type_from_pointer() which
  was in widgets.c and used exclusively by glade_support.c. I came across
  it whilst searching and found it to be only accounting for 20% of the
  widgets and I don't know what impact this would have had if any since